<?xml version="1.0" encoding="utf-8"?>
<resources>       
	<string name="demoActEBListings">eBay Client</string>
    <string name="demoActEvora">Landscape Layout</string>
    <string name="demoActLogButton">Logging</string>
    <string name="demoActNDFDeckEditor">Flashcard Editor</string>
    <string name="demoActNDFDeckChooser">Flashcards</string>
    <string name="demoActTSStockChooser">Ticker Service</string>
    <string name="demoActOpenGL">OpenGL</string>
    <string name="extBackupExtension">.bak</string>
    <string name="extDeckExtension">.deck</string>
    <string name="extQuizExtension">.quiz</string>        
    <string name="labelAdd">Add</string>
    <string name="labelAnnualRange">Annual Range: </string>
    <string name="labelBid">Bid</string>
    <string name="labelBids">Bids</string>
    <string name="labelCancel">Cancel</string>
    <string name="labelCard">Card:</string>
    <string name="labelChange">Change:</string>
    <string name="labelClear">Clear</string>
    <string name="labelCompany">Company: </string>
    <string name="labelCorrect">Correct</string>
    <string name="labelCorrectWithColon">Correct: </string>
    <string name="labelCurrent">Current: </string>
    <string name="labelDateFormat">yyyy.MM.dd \'at\' HH:mm:ss</string>
    <string name="labelDayOpen">Open: </string>
    <string name="labelDeck">Deck: </string>
    <string name="labelDeckName">Deck Name: </string>
    <string name="labelDel">Del</string>
    <string name="labelDelete">Delete</string>
    <string name="labelDescription">Description: </string>
    <string name="labelEarns">Earnings per Share: </string>
    <string name="labelEnds">Ends:  </string>
    <string name="labelEdit">Edit</string>
    <string name="labelFace">Side </string>
    <string name="labelFilter">Filter...</string>
    <string name="labelFlip">Flip</string>
    <string name="labelGT">&gt;</string>
    <string name="labelHigh">High: </string>
    <string name="labelIncorrect">Incorrect</string>
    <string name="labelIncorrectWithColon">Incorrect: </string>
    <string name="labelHuh">Huh?</string>
    <string name="labelKinda">Kinda</string>
    <string name="labelMarketCap">Market Capitalization: </string>
    <string name="labelModified">Modified: </string>
    <string name="labelMinus">-</string>
    <string name="labelName">Name: </string>
    <string name="labelLT">&lt;</string>
    <string name="labelLow">Low: </string>
    <string name="labelNew">New</string>
    <string name="labelNext">Next</string>    
    <string name="labelNo">No</string>
    <string name="labelOk">Ok</string>
    <string name="labelPERatio">P/E Ratio: </string>
    <string name="labelPercentageChange">Percentage Change: </string>
    <string name="labelPlus">+</string>
    <string name="labelPrev">Prev</string>
    <string name="labelPrevious">Previous: </string>
    <string name="labelPreviousClose">Previous Close: </string>
    <string name="labelQuiz">Quiz</string>
    <string name="labelRemaining">Remaining: </string>
    <string name="labelResume">Resume</string>
    <string name="labelRetry">Retry</string>
	<string name="labelSave">Save</string>
	<string name="labelScore">Score: </string>        
    <string name="labelSeeWhatIMean">See what I mean?</string>
    <string name="labelSide">Side: </string>
    <string name="labelSymbol">Symbol: </string>
    <string name="labelTest">Test</string>
    <string name="labelTime">Time: </string>    
    <string name="labelTotal">Total: </string>
    <string name="labelVolume">Volume: </string>
    <string name="labelQuit">Quit</string>
    <string name="labelYes">Yes</string>
    <!-- might want to move tags out to an enum -->    
    <string name="tagNDFDeckChooserPrefs">com.xtrafe.mobile.fma.NDFDeckChooserPrefs</string>
    <string name="tagNDFDeckChooserSelectedDeck">com.xtrafe.mobile.fma.NDFDeckChooserSelectedDeck</string>
    <string name="tagNDFDeckChooserLastQuizDeck">com.xtrafe.mobile.fma.NDFDeckChooserLastQuizDeck</string>
    <string name="tagNDFDeckEditorPrefs">com.xtrafe.mobile.fma.NDFDeckEditorPrefs</string>    
    <string name="tagNDFDeckEditorCurrentCard">com.xtrafe.mobile.fma.NDFDeckEditorCurrentCard</string>
    <string name="tagNDFDeckEditorCurrentFace">com.xtrafe.mobile.fma.NDFDeckEditorCurrentFace</string>    
    <string name="tagNDFDeckEditorDeckFilename">com.xtrafe.mobile.fma.NDFDeckEditorDeckFilename</string>    
    <string name="tagNDFQuizCurrentFace">com.xtrafe.mobile.fma.NDFQuizCurrentFace</string>
    <string name="tagNDFQuizPrefs">com.xtrafe.mobile.fma.NDFQuizPrefs</string>
    <string name="tagNDFQuizFilename">com.xtrafe.mobile.FullMobileApplet.NDFQuizFilename</string>    
    <string name="tagNDFDeckFilename">com.xtrafe.mobile.FullMobileApplet.NDFDeckFilename</string>    
    <string name="textAddACard">Empty deck. Add a card using the \'Add\' card button below.</string>
    <string name="textAddASide">Blank card. Add a side using the \'Add\' side button below.</string>
    <string name="textAreYouSure">Are you sure?</string>
    <string name="textNewSide">New side. Touch to edit.</string>    
    <string name="textEvoraLongEnough">The Lotus Evora is already short enough.</string>
    <string name="textFordPrefectQuote">\"Listen. It\'s a tough universe. There\'s all sorts of people and things trying to do you, kill you, rip you off, everything. If you\'re going to survive out there, you\'ve really got to know where your Log is.\"\n     -Ford Prefect </string>
    <string name="textThereAreMany">There are many like it, but this one is mine.</string>
    <string name="titleAppName">Full Mobile Applet</string>
    <string name="titleChooseDemo">Choose a Demo</string>
    <string name="titleCongratulations">Congratulations!</string>
    <string name="titleDeleteCard">Delete card...</string>
    <string name="titleDeleteDeck">Delete deck...</string>
    <string name="titleDeleteSide">Delete this side...</string>
    <string name="titleEditCardText">Edit card text...</string>
    <string name="titleLoading">Loading...</string>
    <string name="titleLogOutput">\nLog Output...\n</string>
    <string name="titleNewDeck">New Deck...</string>    
</resources>
