<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent" 
  android:orientation="vertical">
    <LinearLayout 
    	android:layout_width="match_parent" 
    	android:id="@+id/ndfdeckeditorLayoutHeader" 
    	android:layout_height="wrap_content">
    </LinearLayout>
    <LinearLayout 
    	android:id="@+id/ndfdeckeditorLayoutHost" 
    	android:layout_width="match_parent" 
    	android:layout_height="wrap_content" 
    	android:layout_weight="1">
	</LinearLayout>
    <LinearLayout 
    	android:id="@+id/ndfdeckeditorLayoutFooter" 
    	android:layout_height="wrap_content" 
    	android:gravity="center_horizontal|fill" 
    	android:layout_width="wrap_content" 
    	android:layout_gravity="center|bottom">
        <Button 
        	android:id="@+id/ndfdeckeditorButtonPrev" 
        	android:layout_width="@dimen/widthCardButton" 
        	android:text="@string/labelPrev" 
        	android:layout_height="wrap_content"/>
        <Button 
        	android:id="@+id/ndfdeckeditorButtonNext" 
        	android:layout_width="@dimen/widthCardButton" 
        	android:text="@string/labelNext" 
        	android:layout_height="wrap_content"/>
        <Button 
        	android:id="@+id/ndfdeckeditorButtonAdd" 
			android:layout_width="@dimen/widthCardButton" 
			android:text="@string/labelAdd" 
			android:layout_height="wrap_content"/>
        <Button 
        	android:id="@+id/ndfdeckeditorButtonDel" 
        	android:layout_width="@dimen/widthCardButton"  
        	android:text="@string/labelDel" 
        	android:layout_height="wrap_content"/>    	
	</LinearLayout>
</LinearLayout>
