<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent" 
  android:orientation="vertical">
    <LinearLayout
    	android:id="@+id/ndfquizcompleteLayoutHost" 
    	android:layout_height="wrap_content"     	
    	android:layout_width="match_parent" 
    	android:orientation="vertical" 
    	android:layout_weight="1" 
    	android:gravity="center">
        <TableLayout 
        	android:id="@+id/ndfquizcompleteTable" 
        	android:layout_height="wrap_content" 
        	android:layout_width="wrap_content" 
        	android:padding="10dp">
            <TableRow 
            	android:id="@+id/ndfquizcompleteTableRow0" 
            	android:layout_height="wrap_content" 
            	android:layout_width="wrap_content">
                <TextView                 	
                	android:id="@+id/ndfquizcompleteLabelCorrect" 
                	android:layout_width="wrap_content" 
                	android:layout_height="wrap_content"
                	android:text="@string/labelCorrectWithColon" />
                <TextView                 	
                	android:id="@+id/ndfquizcompleteCorrect" 
                	android:layout_width="wrap_content" 
                	android:layout_height="wrap_content"
                	android:layout_marginLeft="5dp"
                	android:text="#"/>
            </TableRow>
            <TableRow 
            	android:id="@+id/ndfquizcompleteTableRow1" 
            	android:layout_width="wrap_content" 
            	android:layout_height="wrap_content">
                <TextView 
                	android:id="@+id/ndfquizcompleteLabelIncorrect" 
                	android:layout_width="wrap_content" 
                	android:layout_height="wrap_content" 
                	android:text="@string/labelIncorrectWithColon" />
                <TextView                 	
                	android:id="@+id/ndfquizcompleteIncorrect" 
                	android:layout_width="wrap_content" 
                	android:layout_height="wrap_content"
                	android:layout_marginLeft="5dp"
                	android:text="#"/>
            </TableRow>
            <TableRow 
            	android:id="@+id/ndfquizcompleteTableRow2" 
            	android:layout_width="wrap_content" 
            	android:layout_height="wrap_content">
                <TextView 
                	android:id="@+id/ndfquizcompleteLabelTotal" 
                	android:layout_width="wrap_content" 
                	android:layout_height="wrap_content"                	
                	android:text="@string/labelTotal" />
                <TextView 
                	android:id="@+id/ndfquizcompleteTotal" 
                	android:layout_width="wrap_content" 
                	android:layout_height="wrap_content"
                	android:layout_marginLeft="5dp" 
                	android:text="#" />
            </TableRow>
            <TableRow 
            	android:id="@+id/ndfquizcompleteTableRow3" 
            	android:layout_height="wrap_content" 
            	android:layout_width="match_parent">
                <TextView                 	
                	android:id="@+id/ndfquizcompleteLabelScore" 
                	android:layout_width="wrap_content" 
                	android:layout_height="wrap_content"
                	android:text="@string/labelScore"/>
                <TextView 
                	android:id="@+id/ndfquizcompleteScore" 
                	android:layout_width="wrap_content" 
                	android:layout_height="wrap_content"
                	android:layout_marginLeft="5dp" 
                	android:text="#" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
    <LinearLayout 
    	android:id="@+id/ndfquizcompleteLayoutFooter"
    	android:layout_height="wrap_content"     	
    	android:layout_width="match_parent">
        <Button 
        	android:id="@+id/ndfquizcompleteButtonRetry"
        	android:layout_height="wrap_content" 
        	android:layout_width="wrap_content" 
        	android:layout_weight="0.5"
        	android:text="@string/labelRetry"/>
        <Button
        	android:id="@+id/ndfquizcompleteButtonQuit"         	
        	android:layout_width="wrap_content" 
        	android:layout_height="wrap_content" 
        	android:layout_weight="0.5" 
        	android:text="@string/labelQuit"/>
    </LinearLayout>
</LinearLayout>
