<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  android:id="@+id/tsstockdetailLayout"
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent" 
  android:orientation="vertical" android:padding="3dp">
    <TextView android:layout_width="wrap_content" android:textSize="@dimen/fontscaleHeader" android:text="Company Inc." android:textColor="@color/colorWhite" android:id="@+id/tsstockdetailCompanyName" android:layout_height="wrap_content"></TextView>
    <ScrollView
    	android:id="@+id/tsstockdetailScrollView" 
    	android:layout_height="wrap_content" 
    	android:layout_width="fill_parent">
        <LinearLayout 
        	android:id="@+id/tsstockdetailLayoutHost" 
        	android:layout_width="match_parent" 
        	android:layout_height="match_parent" 
        	android:orientation="vertical">
            <TableLayout 
            	android:id="@+id/tsstockdetailTable"
            	android:layout_height="wrap_content" 
            	android:layout_width="match_parent" android:layout_marginTop="5dp">
                <TableRow 
                 	android:id="@+id/tsstockdetailTableRow1"
                	android:layout_width="wrap_content" 
                	android:layout_height="wrap_content">
                    <TextView 
                    	android:id="@+id/tsstockdetailLabelSymbol" 
                    	android:layout_width="wrap_content" 
                    	android:layout_height="wrap_content" 
                    	android:text="@string/labelSymbol"/>
                    <TextView 
                    	android:id="@+id/tsstockdetailSymbol"
                    	android:paddingLeft="5dp" 
                    	android:layout_width="wrap_content"  
                    	android:layout_height="wrap_content"/>
                </TableRow>
                <TableRow 
                	android:id="@+id/tsstockdetailTableRow2"
                	android:layout_width="wrap_content" 
                	android:layout_height="wrap_content">
                    <TextView                     	 
						android:id="@+id/tsstockdetailLabelTime" 
                    	android:layout_width="wrap_content" 
                    	android:layout_height="wrap_content" 
                    	android:text="@string/labelTime"/>
                    <TextView 
                    	android:id="@+id/tsstockdetailTime"
                    	android:paddingLeft="5dp" 
                    	android:layout_width="wrap_content" 
                    	android:layout_height="wrap_content"/>
                </TableRow>
                <TableRow 
                	android:id="@+id/tsstockdetailTableRow3"
                	android:layout_width="wrap_content" 
                	android:layout_height="wrap_content">
                    <TextView 
                    	android:id="@+id/tsstockdetailLablelPreviousClose"
                    	android:text="@string/labelPreviousClose" 
                    	android:layout_width="wrap_content"                     	
                    	android:layout_height="wrap_content"/>
                    <TextView 
                    	android:id="@+id/tsstockdetailPreviousClose"
                    	android:paddingLeft="5dp" 
                    	android:layout_width="wrap_content"                     	
                    	android:layout_height="wrap_content"/>
                </TableRow>
                <TableRow 
                 	android:id="@+id/tsstockdetailTableRow4"
                	android:layout_width="wrap_content" 
                	android:layout_height="wrap_content">
                    <TextView 
                    	android:id="@+id/tsstockdetailLabelDayOpen"
                    	android:text="@string/labelDayOpen" 
                    	android:layout_width="wrap_content"                     	
                    	android:layout_height="wrap_content"/>
                    <TextView 
                    	android:id="@+id/tsstockdetailDayOpen"
                    	android:paddingLeft="5dp" 
                    	android:layout_width="wrap_content"                     	
                    	android:layout_height="wrap_content"/>
                </TableRow>
                <TableRow 
                	android:id="@+id/tsstockdetailTableRow5"
                	android:layout_width="wrap_content" 
                	android:layout_height="wrap_content">
                    <TextView
                    	android:id="@+id/tsstockdetailLabelCurrent" 
                    	android:layout_width="wrap_content"                     	 
                    	android:layout_height="wrap_content"
                    	android:text="@string/labelCurrent"/>
                    <TextView 
                    	android:id="@+id/tsstockdetailCurrent" 
                    	android:paddingLeft="5dp" 
                    	android:layout_width="wrap_content" 
                    	android:layout_height="wrap_content"/>
                </TableRow>
                <TableRow 
                	android:id="@+id/tsstockdetailTableRow6" 
                	android:layout_width="wrap_content" 
                	android:layout_height="wrap_content">
                    <TextView 
                    	android:id="@+id/tsstockdetailLabelPercentageChange"
                    	android:layout_width="wrap_content"                     
                    	android:layout_height="wrap_content"
                    	android:text="@string/labelPercentageChange"/>
                    <TextView 
                    	android:id="@+id/tsstockdetailPercentageChange" 
                    	android:paddingLeft="5dp" 
                    	android:layout_width="wrap_content" 
                    	android:layout_height="wrap_content"/>
                </TableRow>
                <TableRow 
                	android:id="@+id/tsstockdetailTableRow7"
                	android:layout_width="wrap_content" 
                	android:layout_height="wrap_content">
                    <TextView 
                    	android:id="@+id/tsstockdetailLabelHigh"                    	
                    	android:layout_width="wrap_content"                     	
                    	android:layout_height="wrap_content"
                    	android:text="@string/labelHigh"/>
                    <TextView 
                    	android:id="@+id/tsstockdetailHigh"
                    	android:paddingLeft="5dp" 
                    	android:layout_width="wrap_content"  
                    	android:layout_height="wrap_content"/>
                </TableRow>
                <TableRow 
                	android:id="@+id/tsstockdetailTableRow8"
                	android:layout_width="wrap_content" 
                	android:layout_height="wrap_content">
                    <TextView 
                    	android:id="@+id/tsstockdetailLabelLow" 
                    	android:layout_width="wrap_content" 
                    	android:layout_height="wrap_content"
                    	android:text="@string/labelLow"/>
                    <TextView
                    	android:id="@+id/tsstockdetailLow" 
                    	android:paddingLeft="5dp"                     	
                    	android:layout_width="wrap_content"                     	 
                    	android:layout_height="wrap_content"/>
                </TableRow>
                <TableRow 
                	android:id="@+id/tsstockdetailTableRow9"
                	android:layout_width="wrap_content" 
                	android:layout_height="wrap_content">
                    <TextView 
                    	android:id="@+id/tsstockdetailLabelVolume"
                    	android:layout_width="wrap_content" 
                    	android:layout_height="wrap_content"
                    	android:text="@string/labelVolume"/>
                    <TextView 
                    	android:id="@+id/tsstockdetailVolume" 
                    	android:paddingLeft="5dp" 
                    	android:layout_width="wrap_content" 
                    	android:layout_height="wrap_content"/>
                </TableRow>
                <TableRow 
                	android:id="@+id/tsstockdetailTableRow10"
                	android:layout_width="wrap_content" 
                	android:layout_height="wrap_content">
                    <TextView 
                    	android:id="@+id/tsstockdetailLabelAnnualRange"
                    	android:layout_width="wrap_content" 
                    	android:layout_height="wrap_content"
                    	android:text="@string/labelAnnualRange" />
                    <TextView 
                    	android:id="@+id/tsstockdetailAnnualRange"
                    	android:paddingLeft="5dp" 
                    	android:layout_width="wrap_content" 
                    	android:layout_height="wrap_content"/>
                </TableRow>
                <TableRow 
                	android:id="@+id/tsstockdetailTableRow11"
                	android:layout_width="wrap_content" 
                	android:layout_height="wrap_content">
                    <TextView 
                    	android:id="@+id/tsstockdetailLabelPERatio"
                    	android:layout_width="wrap_content"  
                    	android:layout_height="wrap_content"
                    	android:text="@string/labelPERatio"/>
                    <TextView 
                    	android:id="@+id/tsstockdetailPERatio"
                    	android:paddingLeft="5dp" 
                    	android:layout_width="wrap_content" 
                    	android:layout_height="wrap_content"/>
                </TableRow>
                <TableRow 
                	android:id="@+id/tsstockdetailTableRow12"
                	android:layout_width="wrap_content" 
                	android:layout_height="wrap_content">
                    <TextView
                    	android:id="@+id/tsstockdetailLabelEarns" 
                    	android:layout_width="wrap_content"                     	 
                    	android:layout_height="wrap_content"
                    	android:text="@string/labelEarns"/>
                    <TextView 
                    	android:id="@+id/tsstockdetailEarns"
                    	android:paddingLeft="5dp"                     	
                    	android:layout_width="wrap_content" 
                    	android:layout_height="wrap_content"/>
                </TableRow>
                <TableRow 
                	android:id="@+id/tsstockdetailTableRow13"
                	android:layout_width="wrap_content" 
                	android:layout_height="wrap_content">
                    <TextView 
                    	android:id="@+id/tsstockdetailLabelMarketCap" 
                    	android:layout_width="wrap_content" 
                    	android:layout_height="wrap_content"
                    	android:text="@string/labelMarketCap"/>
                    <TextView 
                    	android:id="@+id/tsstockdetailMarketCap" 
                    	android:paddingLeft="5dp" 
                    	android:layout_width="wrap_content" 
                    	android:layout_height="wrap_content"/>
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
