<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:id="@+id/ndfcardLayout" 
    android:background="@drawable/indexcard">
    <LinearLayout 
    	android:layout_width="match_parent" 
    	android:id="@+id/ndfcardeditorLayoutHeader" 
    	android:layout_height="wrap_content" 
    	android:layout_marginTop="5dp" 
    	android:layout_marginLeft="5dp">        
        <ImageButton
        	android:id="@+id/ndfcardeditorButtonGrow"        	        	
        	android:layout_height="@dimen/heightShrinkGrowButton"
        	android:layout_width="@dimen/widthShrinkGrowButton"
        	android:src="@drawable/icon_grow"/>
		<ImageButton
			android:id="@+id/ndfcardeditorButtonShrink"					
			android:layout_marginLeft="5dp"
			android:layout_height="@dimen/heightShrinkGrowButton"
        	android:layout_width="@dimen/widthShrinkGrowButton"  						
			android:src="@drawable/icon_shrink"/>
		<TextView 
			android:id="@+id/ndfcardeditorLabelCard" 
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:layout_marginRight="5dp"
			android:gravity="right"
			android:text="Card: #"/>						  			
    </LinearLayout>
    <ScrollView
        android:id="@+id/ndfcardeditorScrollView"
        android:layout_width="fill_parent"
        android:layout_weight="1" 
        android:layout_height="match_parent" 
        android:layout_gravity="top" 
        android:scrollbarAlwaysDrawHorizontalTrack="true">
        <TextView 
        	android:id="@+id/ndfcardeditorText" 
        	android:layout_width="match_parent" 
        	android:layout_height="match_parent" 
        	android:textSize="@dimen/fontscaleCardText" 
        	android:text="Card info goes here. May replace this view with an editor at runtime." 
        	android:textColor="@color/colorBlack" 
        	android:gravity="center" 
        	android:layout_gravity="center" 
        	android:layout_margin="5dp" 
        	android:minHeight="150dp"/>
    </ScrollView>
    <LinearLayout
    	android:orientation="horizontal"        
        android:layout_height="wrap_content" 
        android:layout_gravity="center_horizontal|bottom" 
        android:gravity="center" 
        android:layout_width="wrap_content">
        <Spinner 
        	android:id="@+id/ndfcardeditorSpinner" 
        	android:layout_height="@dimen/heightFaceButton" 
        	android:layout_width="wrap_content"/>
        <Button 
        	android:id="@+id/ndfcardeditorButtonPrev" 
        	android:layout_height="@dimen/heightFaceButton"
			android:layout_width="@dimen/widthFaceButton"
			android:text="@string/labelLT" />
        <Button 
        	android:id="@+id/ndfcardeditorButtonNext" 
        	android:text="@string/labelGT"
        	android:layout_height="@dimen/heightFaceButton"			
			android:layout_width="@dimen/widthFaceButton"/>
        <Button 
        	android:id="@+id/ndfcardeditorButtonAdd"
        	android:text="@string/labelAdd" 
        	android:layout_height="@dimen/heightFaceButton"			
			android:layout_width="@dimen/widthFaceButton"/>
        <Button 
        	android:id="@+id/ndfcardeditorButtonDel" 
        	android:text="@string/labelDel" 
        	android:layout_height="@dimen/heightFaceButton"			
			android:layout_width="@dimen/widthFaceButton"/>
    </LinearLayout>
</LinearLayout>
